force-app/main/default/objects/SE_Assignment__mdt/SE_Assignment__mdt.object-meta.xml
<CustomObject>
    <description>SE Phase 2 — auto-tag assignment rules. Each record maps a key to the Sales Engineer who should be tagged on an Opportunity (Opportunity.Sales_Engineer__c). The Opportunity_BeforeSave_AssignSE flow evaluates active rules in precedence By_Account &gt; By_AE &gt; By_Country.</description>
    <label>SE Assignment</label>
    <pluralLabel>SE Assignments</pluralLabel>
</CustomObject>