force-app/main/default/objects/SE_Assignment__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck to disable this rule without deleting it. The auto-tag flow ignores inactive rows.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>