force-app/main/default/objects/SE_Assignment__mdt/fields/Match_Key__c.field-meta.xml
<CustomField>
    <fullName>Match_Key__c</fullName>
    <description>Value to match on the Opportunity. By_Country = Operation_Country__c value (e.g. Japan); By_AE = the opp Owner/AE Username; By_Account = the hyperscale account key (e.g. Account_Tier__c value or a hyperscale-group identifier).</description>
    <label>Match Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>