force-app/main/default/objects/SE_Assignment__mdt/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <description>Which tagging rule this row belongs to. Precedence applied by the flow: By_Account (hyperscale accounts) &gt; By_AE (opp owner) &gt; By_Country (Operation_Country__c).</description>
    <label>Rule Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By_Account</fullName>
                <label>By Account</label>
            </value>
            <value>
                <fullName>By_AE</fullName>
                <label>By AE</label>
            </value>
            <value>
                <fullName>By_Country</fullName>
                <default>true</default>
                <label>By Country</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>