force-app/main/default/objects/SE_Assignment__mdt/fields/SE_Username__c.field-meta.xml
<CustomField>
    <fullName>SE_Username__c</fullName>
    <description>Username of the Sales Engineer to tag onto Opportunity.Sales_Engineer__c. Resolved to a User at runtime (CMDT cannot hold a User lookup). Leave blank with Active=false for a placeholder row.</description>
    <label>SE Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>